--- a/style.css/style.css
+++ b/style.css/style.css
@@ -17,10 +17,10 @@ h1{
     font-weight: lighter;
 }
 h1 span{
-    font-weight: 400;
+    font-weight: 600;
 }
 .text-center h2 span{
-    font-weight: 900;
+    font-weight: 600;
 
 }
 
@@ -33,8 +33,9 @@ h1 span{
     font-weight: lighter;
 }
 .sidervar-container h4 span{
-    font-weight: 400;
+    font-weight: 600;
 }
+
 /*MENU*/
 .col-3{
     bottom: -2em;
@@ -42,29 +43,38 @@ h1 span{
     
 .menu a{
     font-family: 'Work sans';
+    font-weight: 200;
     top: -50px;
 
 }
 a:hover{
     text-decoration: none;
     font-weight: 600;
+    color: #000;
 
 }
+
 /*DIRE*/
 .col-4{
-    bottom: -2em;
+    bottom: -2.5em;
 }
 .col-4 a{
     text-decoration: none;
     color: #000;
 }
 p{
+    font-weight: 200;
+    margin-left: 0.5em;
     margin-bottom: 0%;
 }
 .dire a{
     text-decoration: none;
     color: #000;
 }
+a svg{
+    color: #000;
+}
+
 
 /*mapa*/
 
@@ -76,12 +86,13 @@ img{
 .p-4 p{
     margin-left: 21em;
 }
+p:hover{
+    color: #000;
+}
 
 /*iconos*/
-a svg{
-    
-    margin-left: 1em;
-    margin-top: 7em;
-    margin-bottom: 3em;
+.icon svg{
+    margin-left: 1.5em;
+    margin-bottom: 1em;
     color: #000;
 }
